<resources>
    <string name="app_name">SensuchtV3</string>
    <string name="title_home">Recipe</string>
    <string name="title_dashboard">Kitchen</string>
    <string name="title_notifications">History</string>
    <string name="potato">Potato</string>
    <string name="toast">Toast</string>
    <string name="milk">Milk</string>
    <string name="ingredients">Ingredients</string>
    <string name="skillet">Skillet</string>
    <string name="oven">Oven</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">test</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="quantifier">Quantifier:</string>
    <string name="grams_milliliters">(Grams, Milliliters...)</string>
    <string name="quantity">Quantity</string>
    <string name="tools">Tools</string>
    <string name="dietary_restrictions">Dietary Restrictions</string>
    <string name="what_s_in_your_kitchen">What\'s in Your Kitchen?</string>
    <string name="budget">Budget</string>
    <string name="reset_location">Reset Location</string>
    <string-array name="time_frames">
        <item>Monthly</item>
        <item>Daily</item>
        <item>Per Meal</item>
    </string-array>
</resources>