<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.dashboard.DashboardFragment">

    <ToggleButton
            android:text="@string/potato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/potato"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textOff="@string/potato" android:textOn="@string/potato"
            app:layout_constraintHorizontal_bias="0.122" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.177"/>
    <ToggleButton
            android:text="@string/toast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/toast"
            app:layout_constraintStart_toEndOf="@+id/potato" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:textOff="@string/toast" android:textOn="@string/toast"
            app:layout_constraintHorizontal_bias="0.157" app:layout_constraintVertical_bias="0.177"/>
    <ToggleButton
            android:text="@string/milk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/milk"
            app:layout_constraintStart_toEndOf="@+id/toast" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.376" app:layout_constraintBottom_toBottomOf="parent"
            android:textOff="@string/milk" android:textOn="@string/milk"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.177"/>
    <TextView
            android:text="@string/ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/potato" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.096" android:textSize="24sp"/>
    <TextView
            android:text="Tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.096" android:textSize="24sp"
            app:layout_constraintVertical_bias="0.361" app:layout_constraintBottom_toBottomOf="parent"/>
    <ToggleButton
            android:text="@string/oven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/oven"
            android:textOff="@string/oven" android:textOn="@string/oven"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/skillet"
            android:layout_marginTop="44dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.383"
            app:layout_constraintVertical_bias="0.0"/>
    <ToggleButton
            android:text="@string/skillet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/skillet"
            android:textOff="@string/skillet" android:textOn="@string/skillet"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/toast"
            app:layout_constraintHorizontal_bias="0.489" app:layout_constraintVertical_bias="0.311"/>
</androidx.constraintlayout.widget.ConstraintLayout>