<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".kitchenLogic.ingredients.AddIngredient" android:id="@+id/frameLayout3">
    <TextView
            android:text="@string/quantifier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView9"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="372dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498" android:textSize="20sp"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="325dp"
            android:layout_height="59dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginTop="364dp" android:id="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="325dp"
                android:layout_height="59dp"
                android:id="@+id/ingQuant"
                android:hint="@string/grams_milliliters"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
            android:text="@string/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView7"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="212dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498" android:textSize="20sp"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="325dp"
            android:layout_height="59dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView7"
            android:layout_marginTop="36dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="325dp"
                android:layout_height="59dp"
                android:id="@+id/ingNumber"
                android:hint="(Numbers Only)"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
            android:text="Ingredient Name:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="36dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498" android:textSize="20sp"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="325dp"
            android:layout_height="59dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginTop="40dp" app:layout_constraintHorizontal_bias="0.494">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="325dp"
                android:layout_height="59dp"
                android:id="@+id/ingName"
                android:hint="(Chicken thighs, carrots...)"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:text="Add Ingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/addButt"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/textInputLayout"/>
</androidx.constraintlayout.widget.ConstraintLayout>